// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBarItem should disable animations 1`] = `
<div
  class="css-1rsaaz4-navbar-item simple denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;

exports[`NavBarItem should render a basic item 1`] = `
<div
  class="css-u5g9s-navbar-item simple denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;

exports[`NavBarItem should render a complex active link item 1`] = `
<div
  class="css-u5g9s-navbar-item active nav-link denali-navbar-item"
  data-testid="navbar-item"
>
  <div
    class="complex-item"
  >
    <div
      class="nav-title"
      data-testid="navbar-text"
    >
      A complex active link item
    </div>
  </div>
</div>
`;

exports[`NavBarItem should render a complex item 1`] = `
<div
  class="css-u5g9s-navbar-item denali-navbar-item"
  data-testid="navbar-item"
>
  <div
    class="complex-item"
  >
    <div
      class="nav-title"
      data-testid="navbar-text"
    >
      A complex item
    </div>
  </div>
</div>
`;

exports[`NavBarItem should render a link item 1`] = `
<div
  class="css-u5g9s-navbar-item simple nav-link denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;

exports[`NavBarItem should render a right-aligned item 1`] = `
<div
  class="css-u5g9s-navbar-item simple flush-right denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;

exports[`NavBarItem should render an active item 1`] = `
<div
  class="css-u5g9s-navbar-item simple active denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;

exports[`NavBarItem should render an active link item 1`] = `
<div
  class="css-u5g9s-navbar-item simple active nav-link denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;

exports[`NavBarItem should render an item with width 1`] = `
<div
  class="css-4zfxxl-navbar-item simple denali-navbar-item"
  data-testid="navbar-item"
>
  An item
</div>
`;
